--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>Hi! I am Aizel. I am 23 years old. I was born at Looc, Cawayan, Masbate and I am the 5th child of Mrs.Gina H. Cantado & Mr. Allan Cantado. I am proud to be a bisaya. My birthday is on October 25, 2000. Why I choose IT because this field have full of thrill for me. </p>
     </section>
 
     <section id="portfolio" class="portfolio">
